Fix T63816: Crash opening file with multiple view layers

Dependency graph will not be crated for view layers which were never visible.